# black-jack

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Black-Jack.sln  Black-Jack.vcxproj  Black-Jack.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  README.md  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  UnitTests.vcxproj  UnitTests.vcxproj.filters  UnitTests[1]_include.cmake  UnitTests[1]_tests.cmake  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  vcpkg.json
.github/workflows/: build.yml
Black-Jack/: CMakeLists.txt
Black-Jack/forms/: mainwindow.ui
Black-Jack/header/: card.h  deck.h  deck_controller.h  dialog.h  hand_class.h  hand_controller.h  mainwindow.h
Black-Jack/src/: card.cpp  deck.cpp  deck_controller.cpp  dialog.cpp  hand_class.cpp  hand_controller.cpp  main.cpp  mainwindow.cpp  mainwindow.ui
Black-Jack/unit_tests/: test_deck.cpp  test_hand.cpp
TestResults/d5339708-bd9b-49e8-87a6-fa98a610d81e/: SPAC-O-3_SPAC-PF5HJTTC_2026-02-19.19_59_49.coverage
